Complete save, shutter sound, invert, fix z-index for save. Quote and error handling. Data to Blob conversion.

--- a/index.css
+++ b/index.css
@@ -21,12 +21,13 @@ div.container-fluid {
 
 #control {
   height: 100%;
+  z-index: 1;
 }
 #control span {
   position: relative;
   width: 98%;
   text-align: center;
-  z-index: 1;
+  z-index: 10;
 }
 #control span.to-top {
   position: absolute;
@@ -34,17 +35,20 @@ div.container-fluid {
 }
 #control span.to-center {
   display: table;
-  height: 100%
+  height: 100%;
+  z-index: 8;
 }
 #control span.to-middle {
   display: table-cell;
   vertical-align: middle;
+  z-index: 9;
 }
 #control span.to-bottom {
   position: absolute;
   bottom: 0;
 }
 #control button {
+  z-index: 11;
   margin: 10% auto 10% auto;
   padding: 0;
 }
